--- a/web_pages/image_playground_system.html
+++ b/web_pages/image_playground_system.html
@@ -176,7 +176,7 @@
             const resultInfo = document.getElementById("result_info");
             const loadingDiv = document.getElementById("loading_div");
 
-            loadingDiv.innerHTML = "<p><br>Generating image...</p<";
+            loadingDiv.innerHTML = "<p><br>Generating image...</p>";
             // resultInfo.innerHTML = "";
 
             if (!apiKey || !prompt || !model) {
