--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <p>WIP</p>
     <nav>
       <ul>
-        <li><a href="./testing/hf_scratch_v8.js">hf_scratch_v8</a></li>
-        <li><a href="./web_pages/hf_image_generator.html">hf_image_generator</a></li>
-        <li><a href="./web_pages/fal-image-gen.html">fal-image-generator</a></li>
+        <li><a href="./testing/hf_scratch_v8.js">HF Scratch extension</a></li>
+        <li><a href="./web_pages/image_playground.html">Prompt Practice: Images Playground</a></li>
+        <li><a href="./web_pages/image_playground_system.html">[draft] System Prompting</a></li>
 
       </ul>
     </nav>
