--- a/index.html
+++ b/index.html
@@ -26,12 +26,19 @@
     <h2>Navigate</h2>
     <h3>View test pages and active extensions</h3>
 
-    <p>Active Extensions</p>
+    <p>Old Extensions</p>
     <nav>
       <ul>
         <li><a href="./openai-scratch-chat-v2.js">openai-scratch-chat-v2</a></li>
         <li><a href="./openai-scratch-dalle-v2.js">openai-scratch-dalle-v2</a></li>
       </ul>
+    </nav>
+     <p>NEW Extensions</p>
+    <nav>
+      <ul>
+<li><a href="https://bethatcurtin.github.io/files/open_router_scratch.js">Scratch: Text>Text</a></li>
+    <li><a href="https://bethatcurtin.github.io/files/hugging_face_scratch.js">Scratch: Text>Image</a></li>
+</ul>
     </nav>
 
     <p>WIP</p>
@@ -45,6 +52,7 @@
     </nav>
 
 
+   
 
   </div>
 
