--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <ul>
         <li><a href="./web_pages/image_playground.html">Prompt Practice: Images Playground</a></li>
         <li><a href="./web_pages/image_playground_system.html">[draft] Images System Prompting</a></li>
-        <li><a href="./web_pages/text_playground">Prompt Practice: Text Playground</a></li>
+        <li><a href="./web_pages/text_playground.html">Prompt Practice: Text Playground</a></li>
 
       </ul>
     </nav>
