--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
     </nav>
 
 
+    
+    <p>DEMOS</p>
+    <nav>
+      <ul>
+        <li><a href="https://drive.google.com/file/d/1MVyyhzq4dA9EISB6whF3eYkC2bmlmmip/view?usp=sharing">Scratch Extension: Dino Joke Chat</a></li>
+      </ul>
+    </nav>
+    
+
+
    
 
   </div>
