--- a/web_pages/image_playground.html
+++ b/web_pages/image_playground.html
@@ -26,14 +26,14 @@
             <!-- https://huggingface.co/api/models?inference_provider=fal-ai&pipeline_tag=text-to-image -->
             <select id="model">
                 <option value="AuraFlow-v0.3">AuraFlow-v0.3</option>
-                <option value="FLUX.1-dev">FLUX.1-dev</option>
+<!--                 <option value="FLUX.1-dev">FLUX.1-dev</option> -->
                 <option value="FLUX.1-schnell">FLUX.1-schnell</option>
-                <option value="HiDream-I1-Dev">HiDream-I1-Dev</option>
+<!--                 <option value="HiDream-I1-Dev">HiDream-I1-Dev</option> -->
                 <option value="HiDream-I1-Fast">HiDream-I1-Fast</option>
-                <option value="HiDream-I1-Full">HiDream-I1-Full</option>
-                <option value="stable-diffusion-3.5-large">stable-diffusion-3.5-large</option>
+<!--                 <option value="HiDream-I1-Full">HiDream-I1-Full</option> -->
+<!--                 <option value="stable-diffusion-3.5-large">stable-diffusion-3.5-large</option> -->
                 <option value="stable-diffusion-3.5-large-turbo">stable-diffusion-3.5-large-turbo</option>
-                <option value="stable-diffusion-3.5-medium">stable-diffusion-3.5-medium</option>
+<!--                 <option value="stable-diffusion-3.5-medium">stable-diffusion-3.5-medium</option> -->
 
 
             </select>
