--- a/web_pages/text_playground.html
+++ b/web_pages/text_playground.html
@@ -71,17 +71,17 @@
             <input type="number" id="temperature" rows="1" placeholder="1">
             <p class="info">double | Optional | Sampling temperature (range: [0, 2]).</p>
 
-            <label for="seed">seed</label>
+<!--             <label for="seed">seed</label>
             <input type="number" id="seed" rows="1" placeholder="1">
-            <p class="info">integer | Optional | Seed for deterministic outputs.</p>
+            <p class="info">integer | Optional | Seed for deterministic outputs.</p> -->
 
             <label for="top_p">top_p</label>
             <input type="number" id="top_p" rows="1" placeholder="1">
             <p class="info">double | Optional | Top-p sampling value (range: (0, 1]).</p>
 
-            <label for="top_k">top_k</label>
+<!--             <label for="top_k">top_k</label>
             <input type="number" id="top_k" rows="1" placeholder="1">
-            <p class="info">integer | Optional | Top-k sampling value (range: [1, Infinity)).</p>
+            <p class="info">integer | Optional | Top-k sampling value (range: [1, Infinity)).</p> -->
 
             <label for="frequency_penalty">frequency_penalty</label>
             <input type="number" id="frequency_penalty" rows="1" placeholder="1">
@@ -125,7 +125,7 @@
             </div>
 
             <label for="prompt">prompt:</label>
-            <textarea id="prompt" rows="4" placeholder="A scenic view of mountains during sunset..."></textarea>
+            <textarea id="prompt" rows="4" placeholder="What colour is the sky?"></textarea>
 
 
 
