--- a/web_pages/text_playground.html
+++ b/web_pages/text_playground.html
@@ -29,7 +29,7 @@
                 </option>
                 <option value="google/gemini-2.0-flash-thinking-exp:free">Google: Gemini 2.0 Flash Thinking Experimental
                     01-21 (free)</option>
-                <option value="google/gemini-2.5-pro-exp-03-25:free">Google: Gemini 2.5 Pro Experimental (free)</option>
+<!--                 <option value="google/gemini-2.5-pro-exp-03-25:free">Google: Gemini 2.5 Pro Experimental (free)</option>
                 <option value="google/gemma-3-12b-it:free">Google: Gemma 3 12B (free)</option>
                 <option value="google/gemma-3-1b-it:free">Google: Gemma 3 1B (free)</option>
                 <option value="google/gemma-3-27b-it:free">Google: Gemma 3 27B (free)</option>
@@ -37,27 +37,27 @@
                 <option value="mistralai/mistral-small-24b-instruct-2501:free">Mistral: Mistral Small 3 (free)</option>
                 <option value="mistralai/mistral-small-3.1-24b-instruct:free">Mistral: Mistral Small 3.1 24B (free)
                 </option>
-                <option value="sophosympatheia/rogue-rose-103b-v0.2:free">Rogue Rose 103B v0.2 (free)</option>
+                <option value="sophosympatheia/rogue-rose-103b-v0.2:free">Rogue Rose 103B v0.2 (free)</option> -->
                 <option value="google/gemma-3-4b-it">Google: Gemma 3 4B</option>
-                <option value="deepseek/deepseek-r1-distill-llama-8b">DeepSeek: R1 Distill Llama 8B</option>
+<!--                 <option value="deepseek/deepseek-r1-distill-llama-8b">DeepSeek: R1 Distill Llama 8B</option> -->
                 <option value="google/gemma-3-12b-it">Google: Gemma 3 12B</option>
-                <option value="mistral/ministral-8b">Mistral: Ministral 8B</option>
+<!--                 <option value="mistral/ministral-8b">Mistral: Ministral 8B</option>
                 <option value="mistralai/mistral-small-24b-instruct-2501">Mistral: Mistral Small 3</option>
-                <option value="scb10x/llama3.1-typhoon2-8b-instruct">Typhoon2 8B Instruct</option>
+                <option value="scb10x/llama3.1-typhoon2-8b-instruct">Typhoon2 8B Instruct</option> -->
                 <option value="google/gemma-3-27b-it">Google: Gemma 3 27B</option>
-                <option value="tokyotech-llm/llama-3.1-swallow-8b-instruct-v0.3">Swallow: Llama 3.1 Swallow 8B Instruct
-                    V0.3</option>
+<!--                 <option value="tokyotech-llm/llama-3.1-swallow-8b-instruct-v0.3">Swallow: Llama 3.1 Swallow 8B Instruct
+                    V0.3</option> -->
                 <option value="meta-llama/llama-guard-3-8b">Llama Guard 3 8B</option>
                 <option value="google/gemini-2.0-flash-lite-001">Google: Gemini 2.0 Flash Lite</option>
-                <option value="mistralai/mistral-small-3.1-24b-instruct">Mistral: Mistral Small 3.1 24B</option>
+<!--                 <option value="mistralai/mistral-small-3.1-24b-instruct">Mistral: Mistral Small 3.1 24B</option> -->
                 <option value="google/gemini-2.0-flash-001">Google: Gemini 2.0 Flash</option>
                 <option value="openai/gpt-4o-mini-search-preview">OpenAI: GPT-4o-mini Search Preview</option>
-                <option value="mistralai/mistral-saba">Mistral: Saba</option>
-                <option value="deepseek/deepseek-r1-distill-llama-70b">DeepSeek: R1 Distill Llama 70B</option>
-                <option value="mistralai/codestral-2501">Mistral: Codestral 2501</option>
-                <option value="scb10x/llama3.1-typhoon2-70b-instruct">Typhoon2 70B Instruct</option>
-                <option value="latitudegames/wayfarer-large-70b-llama-3.3">LatitudeGames: Wayfarer Large 70B Llama 3.3
-                </option>
+<!--                 <option value="mistralai/mistral-saba">Mistral: Saba</option> -->
+<!--                 <option value="deepseek/deepseek-r1-distill-llama-70b">DeepSeek: R1 Distill Llama 70B</option> -->
+<!--                 <option value="mistralai/codestral-2501">Mistral: Codestral 2501</option> -->
+<!--                 <option value="scb10x/llama3.1-typhoon2-70b-instruct">Typhoon2 70B Instruct</option> -->
+<!--                 <option value="latitudegames/wayfarer-large-70b-llama-3.3">LatitudeGames: Wayfarer Large 70B Llama 3.3 -->
+<!--                 </option> -->
                 <option value="tokyotech-llm/llama-3.1-swallow-70b-instruct-v0.3">Swallow: Llama 3.1 Swallow 70B
                     Instruct V0.3</option>
 
