--- a/web_pages/text_playground.html
+++ b/web_pages/text_playground.html
@@ -25,16 +25,16 @@
             <!-- https://huggingface.co/api/partners/fal-ai/models -->
             <!-- https://huggingface.co/api/models?inference_provider=fal-ai&pipeline_tag=text-to-image -->
             <select id="model">
-                <option value="deepseek/deepseek-r1-distill-llama-70b:free">DeepSeek: R1 Distill Llama 70B (free)
+<!--                 <option value="deepseek/deepseek-r1-distill-llama-70b:free">DeepSeek: R1 Distill Llama 70B (free)
                 </option>
                 <option value="google/gemini-2.0-flash-thinking-exp:free">Google: Gemini 2.0 Flash Thinking Experimental
-                    01-21 (free)</option>
+                    01-21 (free)</option> -->
 <!--                 <option value="google/gemini-2.5-pro-exp-03-25:free">Google: Gemini 2.5 Pro Experimental (free)</option>
                 <option value="google/gemma-3-12b-it:free">Google: Gemma 3 12B (free)</option>
                 <option value="google/gemma-3-1b-it:free">Google: Gemma 3 1B (free)</option>
-                <option value="google/gemma-3-27b-it:free">Google: Gemma 3 27B (free)</option>
+                <option value="google/gemma-3-27b-it:free">Google: Gemma 3 27B (free)</option> -->
                 <option value="google/gemma-3-4b-it:free">Google: Gemma 3 4B (free)</option>
-                <option value="mistralai/mistral-small-24b-instruct-2501:free">Mistral: Mistral Small 3 (free)</option>
+             <!--   <option value="mistralai/mistral-small-24b-instruct-2501:free">Mistral: Mistral Small 3 (free)</option>
                 <option value="mistralai/mistral-small-3.1-24b-instruct:free">Mistral: Mistral Small 3.1 24B (free)
                 </option>
                 <option value="sophosympatheia/rogue-rose-103b-v0.2:free">Rogue Rose 103B v0.2 (free)</option> -->
