--- a/web_pages/text_playground.html
+++ b/web_pages/text_playground.html
@@ -38,13 +38,13 @@
                 <option value="mistralai/mistral-small-3.1-24b-instruct:free">Mistral: Mistral Small 3.1 24B (free)
                 </option>
                 <option value="sophosympatheia/rogue-rose-103b-v0.2:free">Rogue Rose 103B v0.2 (free)</option> -->
-                <option value="google/gemma-3-4b-it">Google: Gemma 3 4B</option>
+<!--                 <option value="google/gemma-3-4b-it">Google: Gemma 3 4B</option> -->
 <!--                 <option value="deepseek/deepseek-r1-distill-llama-8b">DeepSeek: R1 Distill Llama 8B</option> -->
                 <option value="google/gemma-3-12b-it">Google: Gemma 3 12B</option>
 <!--                 <option value="mistral/ministral-8b">Mistral: Ministral 8B</option>
                 <option value="mistralai/mistral-small-24b-instruct-2501">Mistral: Mistral Small 3</option>
                 <option value="scb10x/llama3.1-typhoon2-8b-instruct">Typhoon2 8B Instruct</option> -->
-                <option value="google/gemma-3-27b-it">Google: Gemma 3 27B</option>
+<!--                 <option value="google/gemma-3-27b-it">Google: Gemma 3 27B</option> -->
 <!--                 <option value="tokyotech-llm/llama-3.1-swallow-8b-instruct-v0.3">Swallow: Llama 3.1 Swallow 8B Instruct
                     V0.3</option> -->
                 <option value="meta-llama/llama-guard-3-8b">Llama Guard 3 8B</option>
