--- a/web_pages/image_playground.html
+++ b/web_pages/image_playground.html
@@ -26,6 +26,7 @@
             <!-- https://huggingface.co/api/models?inference_provider=fal-ai&pipeline_tag=text-to-image -->
             <select id="model">
                 <option value="AuraFlow-v0.3">AuraFlow-v0.3</option>
+                <option value="Sana-Test">Sana Test</option>
 <!--                 <option value="FLUX.1-dev">FLUX.1-dev</option> -->
                 <option value="FLUX.1-schnell">FLUX.1-schnell</option>
 <!--                 <option value="HiDream-I1-Dev">HiDream-I1-Dev</option> -->
@@ -72,6 +73,10 @@
             "AuraFlow-v0.3": {
                 "hfId": "fal/AuraFlow-v0.3",
                 "providerId": "fal-ai/aura-flow"
+            },
+            "Sana-Test": {
+                "hfId": "fal/sana",
+                "providerId": "fal-ai/sana"
             },
             "FLUX.1-dev": {
                 "hfId": "black-forest-labs/FLUX.1-dev",
