--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     <p>DEMOS</p>
     <nav>
       <ul>
-        <li><a href="https://drive.google.com/file/d/1MVyyhzq4dA9EISB6whF3eYkC2bmlmmip/view?usp=sharing">Scratch Extension: Dino Joke Chat</a></li>
+        <li><a href="https://drive.google.com/file/d/1MVyyhzq4dA9EISB6whF3eYkC2bmlmmip/view?usp=sharing">Video: Dino Joke Chat</a></li>
+        <li><a href="./scratch_demos/story_generator_demo.html">Demo: Short Story Generator</a></li>
       </ul>
     </nav>
     
