--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
         <li><a href="./scratch_demos/story_generator_demo.html">Demo: Short Story Generator</a></li>
       </ul>
     </nav>
+
+
+
+     <p>DEV TESTING</p>
+    <nav>
+      <ul>
+        <li><a href="./web_pages/image_playground_test.html">[DEV]: Images Playground</a></li>
+      </ul>
+    </nav>
     
 
 
