--- a/web_pages/image_playground_test.html
+++ b/web_pages/image_playground_test.html
@@ -179,7 +179,7 @@
                     },
                     body: JSON.stringify({
                         sync_mode: true,
-                        prompt: prompt,
+                        prompt: `Generate this image. You are generating for a young audience. DO NOT include any NSFW or unsafe or graphic content. Generate: ${prompt}`,
                     })
                 });
 
