--- a/web_pages/image_playground_test.html
+++ b/web_pages/image_playground_test.html
@@ -168,7 +168,8 @@
                     },
                     body: JSON.stringify({
                         sync_mode: true,
-                        prompt: `Generate this image. You are generating for a young audience. DO NOT include any NSFW or unsafe or graphic content. Generate: ${prompt}`,
+                        enable_safety_checker: true,
+                        prompt: prompt,
                     })
                 });
 
