--- a/web_pages/image_playground_test.html
+++ b/web_pages/image_playground_test.html
@@ -191,7 +191,7 @@
 
                 const chatWindow = document.getElementById('chat-window');
                 chatWindow.scrollTop = chatWindow.scrollHeight;
-
+                console.log(result);
 
 
 
