--- a/web_pages/text_playground.html
+++ b/web_pages/text_playground.html
@@ -289,7 +289,7 @@
 
             loadingDiv.innerHTML = `<p><br>Generating response...</p><img src="../assets/icons/spinner-ring.svg">`;
  if (!apiKey) {
-                apikey = BETH_TEXT_KEY;
+                const openrouter_apiKey = process.env.BETH_TEXT_KEY;
             }
             if (!prompt || !model) {
                 resultDiv.innerHTML = "All fields are required.";
