--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li><a href="./web_pages/image_playground.html">Prompt Practice: Images Playground</a></li>
         <li><a href="./web_pages/image_playground_system.html">[draft] Images System Prompting</a></li>
         <li><a href="./web_pages/text_playground.html">Prompt Practice: Text Playground</a></li>
+       
 
       </ul>
     </nav>
@@ -67,6 +68,7 @@
     <nav>
       <ul>
         <li><a href="./web_pages/image_playground_test.html">[DEV]: Images Playground</a></li>
+         <li><a href="./web_pages/text_playground_test.html">[DEV]: Text Playground</a></li>
       </ul>
     </nav>
     
