--- a/web_pages/text_playground_test.html
+++ b/web_pages/text_playground_test.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="./styles/text_playground.css">
+    <link rel="stylesheet" href="../styles/text_playground.css">
     <link rel="icon" type="image/x-icon" href="../assets/b-profile-pic.png">
 
     <!-- Model output Text formatting -->
