--- a/playgrounds/image_playground.html
+++ b/playgrounds/image_playground.html
@@ -348,7 +348,7 @@ document.getElementById("prompt").addEventListener("keydown", logKey);
 
 
             const body_clean_prompt = {
-                model: "google/gemma-3-27b-it",
+                model: "google/gemini-2.5-flash-preview",
                 messages: [
                     {
                         role: "system",
